Fix image cropping bug

--- a/hooks/usePortableTextComponents.module.css
+++ b/hooks/usePortableTextComponents.module.css
@@ -1,9 +1,3 @@
-@media screen and (min-width: 750px) {
-  .Image {
-    margin-bottom: 32px !important;
-  }
-}
-
 .Body {
   margin-bottom: 2rem;
 }
